--- a/src/projet/client/views/produit.html
+++ b/src/projet/client/views/produit.html
@@ -28,7 +28,7 @@
                     <button class="select-quantite-button" onclick='diminuerQuantite(".select-quantite-text");'>-</button>
                     <p class="select-quantite-text">1</p>
                     <button class="select-quantite-button" onclick='augmenterQuantite(".select-quantite-text");'>+</button>
-                    <div action="" method="" class="select-quantite-panier-button-container">
+                    <div class="select-quantite-panier-button-container">
                         <button class="select-quantite-panier-button">
                             <img class="select-quantite-panier" src="/images/panier.webp" alt="panier">
                         </button>
