--- a/src/projet/client/views/recherche.html
+++ b/src/projet/client/views/recherche.html
@@ -23,7 +23,7 @@
                 </div>
                 <div class="filtre-container">
                     <p>Bières / Cidres</p>
-                    <input type="checkbox" name="Bières / Cidres" class="filtre-checkbox">
+                    <input type="checkbox" name="Bieres" class="filtre-checkbox">
                 </div>
                 <div class="filtre-container">
                     <p>Spiritueux</p>
