--- a/src/projet/client/views/recherche.html
+++ b/src/projet/client/views/recherche.html
@@ -39,16 +39,16 @@
                     <div id="recherche-liste-tri-container">
                         <p>Tri :</p>
                         <select name="tri" id="tri-combobox">
-                            <option value="AZ">De A à Z</option>
-                            <option value="ZA">De Z à A</option>
-                            <option value="prix-croissant">Prix croissant</option>
-                            <option value="prix-decroissant">Prix décroissant</option>
+                            <option value="alpha_asc">De A à Z</option>
+                            <option value="alpha_desc">De Z à A</option>
+                            <option value="prix_asc">Prix croissant</option>
+                            <option value="prix_desc">Prix décroissant</option>
                         </select>
                     </div>
                     <div id="recherche-promotions-container">
                         <p>Uniquement les promotions</p>
                         <label id="toggle-promotions-container">
-                            <input type="checkbox">
+                            <input type="checkbox" name="Promotions">
                             <span id="promotions-slider-round"></span>
                         </label>
                     </div>
