--- a/src/projet/client/views/commandes.html
+++ b/src/projet/client/views/commandes.html
@@ -9,19 +9,13 @@
             <input class="search-bar" action="/recherche.html" type="text" placeholder="Rechercher..."
                 onkeypress="checkPress(event)">
         </div>
-        <div class="profile-all-buttons-container">
-           
-        </div>
+        <div class="profile-all-buttons-container"></div>
     </nav>
     <hr class="hr-nav">
     <main>
         <h1>Commandes</h1>
-        <div class="liste-vide-container">
-            
-        </div>
-
-        <div id="liste-commandes-container">
-        </div>
+        <div class="liste-vide-container"></div>
+        <div id="liste-commandes-container"></div>
     </main>
 </div>
 <footer>
