--- a/src/projet/client/views/panier.html
+++ b/src/projet/client/views/panier.html
@@ -9,23 +9,15 @@
             <input class="search-bar" action="/recherche.html" type="text" placeholder="Rechercher..."
                 onkeypress="checkPress(event)">
         </div>
-        <div class="profile-all-buttons-container">
-           
-        </div>
+        <div class="profile-all-buttons-container"></div>
     </nav>
     <hr class="hr-nav">
     <main>
         <h1>Mon panier</h1>
-        <div class="liste-vide-container">
-                
-            </div>
-
-        <div id="liste-panier-container">
-            
-        </div>
+        <div class="liste-vide-container"></div>
+        <div id="liste-panier-container"></div>
     </main>
 </div>
-
 <footer>
     <div class="footer-adresse-container">
         <p>DrinkUP</p>
