--- a/src/projet/client/views/produit.html
+++ b/src/projet/client/views/produit.html
@@ -9,9 +9,7 @@
             <input class="search-bar" action="/recherche.html" type="text" placeholder="Rechercher..."
                 onkeypress="checkPress(event)">
         </div>
-        <div class="profile-all-buttons-container">
-           
-        </div>
+        <div class="profile-all-buttons-container"></div>
     </nav>
     <hr class="hr-nav">
     <main>
