--- a/src/projet/client/views/produit.html
+++ b/src/projet/client/views/produit.html
@@ -14,7 +14,7 @@
     <hr class="hr-nav">
     <main>
         <div id="all-achat-boisson-container">
-            <img src="" id="achat-boisson-image" alt="boisson" onerror="javascript:this.src='/images/no-image.webp'">
+            <img src="" id="achat-boisson-image" alt="boisson" onerror="javascript:this.src='images/no-image.webp'">
             <div id="achat-boisson-container">
                 <p id="achat-boisson-nom"></p>
                 <p id="achat-boisson-quantite"></p>
@@ -28,7 +28,7 @@
                     <button class="select-quantite-button" onclick='augmenterQuantite(".select-quantite-text");'>+</button>
                     <div class="select-quantite-panier-button-container">
                         <button class="select-quantite-panier-button">
-                            <img class="select-quantite-panier" src="/images/panier.webp" alt="panier">
+                            <img class="select-quantite-panier" src="images/panier.webp" alt="panier">
                         </button>
                     </div>
                 </div>
