--- a/src/projet/client/views/creation-compte.html
+++ b/src/projet/client/views/creation-compte.html
@@ -1,7 +1,7 @@
 <div class="page-content-container">
     <nav class="nav-container">
         <div class="logo-container">
-            <a href="/index.html" class="logo-button">
+            <a class="logo-button" onclick="indexCtrl.loadAccueil()">
                 <p class="logo"><span class="bold">Drink</span>UP</p>
             </a>
         </div>
